[change] onUpdateTask function.

--- a/src/app/stylesheets/_base.scss
+++ b/src/app/stylesheets/_base.scss
@@ -12,7 +12,7 @@ body {
   font-smooth: always;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
-  color: $t-light;
+  color: $t-black;
 }
 
 h1 {
