--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -8,7 +8,7 @@ $white:       #FFFFFF;
 
 /* TEXT COLORS */
 $t-black:     $black;
-$t-light:     $light-gray !default;
+$t-light:     $light-gray;
 $t-dark-gray: $dark-gray;
 $t-gray:      $gray;
 $t-red:       #d1283e;
