--- a/src/app/stylesheets/_layouts.scss
+++ b/src/app/stylesheets/_layouts.scss
@@ -12,126 +12,8 @@ header {
   .container-fluid, .row, #calendar-viewport, #task-viewport, #timeline-viewport {
     height: 100%;
   }
-  #calendar-viewport {
-    div.dayname:first-child {
-      margin-top: 100px;
-    }
-    div.dayname {
-      line-height: 1.1;
-      font-size: $font-medium;
-      margin: 10px 0;
-    }
-  }
-  #task-viewport {
-    outline: none;
-    ul.task-line {
-      pointer-events: none;
-      li {
-        margin-left: 20px;
-        div { pointer-events: none }
-      }
-      li::before {
-        content: ' ';
-        display: inline-block;
-        float: left;
-        margin: 0px 10px 0 -20px;
-        width: 14px;
-        height: 14px;
-        cursor: pointer;
-        pointer-events: auto;
-        background-image: url("../../images/not_done.png");
-      }
-      li.done::before {
-        background-image: url("../../images/done.png");
-      }
-      li.done div {
-        text-decoration: line-through;
-        color: $t-black;
-      }
-    }
-    .ace-line {
-      pointer-events: none;
-      color: $t-black;
-      line-height: 1.1;
-      font-size: $font-medium;
-      padding: 5px 0;
-      margin-left: 20px;
-    }
-    div.ace-line:first-child {
-      font-size: $font-large;
-      color: $t-black;
-      margin: 20px 0 40px;
-      font-weight: 500;
-      line-height: 1.1;
-    }
-    div.ace-line:empty:before {
-    	color: $light-gray;
-    	content: attr(data-placeholder);
-      margin-left: 5px;
-    }
-  }
-  #timeline-viewport {
-    margin-top: 20px;
-    table { table-layout: fixed }
-    table tbody {
-      tr td.tv-marker {
-        position: absolute;
-        width: 100%;
-        .markercell {
-          width: 60%;
-          height: 25px;
-          margin-bottom: 25px;
-          border-bottom: 1px dotted #ddd;
-          border-top: 1px solid #ddd;
-          font-size: 1px;
-        }
-      }
-      tr td.tv-time {
-        padding-right: 10px;
-        position: relative;
-        .time {
-          text-align: right;
-          height: 50px;
-        }
-      }
-      tr td.tv-task {
-        position: relative;
-        width: 100%;
-        .task {
-          position: absolute;
-          left: -1px;
-          width: 55%;
-          height: 49px;
-          background-color: #4986E7;
-          color: #FFF;
-          &.done {
-            background-color: #DBE7FA;
-            color: #777777;
-            span { font-weight: 400 }
-          }
-          &.alert {
-            top:575px;
-            background-color:#E57373;
-            border-radius: 0px;
-            padding: 0px;
-          }
-          span {
-            display: block;
-            padding: 5px 0 0 5px;
-            font-size: $font-small;
-            font-weight: 600;
-          }
-        }
-        .nowmarker {
-          position: absolute;
-          left: 0;
-          width: 400px;
-          top: 320px;
-          height: 0;
-          border-top: 2px solid #ff7f6e;
-          overflow: hidden;
-        }
-      }
-    }
-  }
 }
+
+@import "layouts/task-viewport";
+@import "layouts/timeline-viewport";
+@import "layouts/calendar-viewport";
