--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -17,3 +17,12 @@ $caution:     $t-red;
 $t-holiday:   #be0d34;
 $sgray:       #808080;
 $notes:       #b1b0ae;
+
+/* BACKGROUND COLORS */
+$primary-indigo:  #009688;
+$indigo-darker:   #00897B;
+$indigo-lighter:  #E0F2F1;
+
+// $primary-indigo:  #FFCA28;
+// $indigo-darker:   #FF8F00;
+// $indigo-lighter:  #FFF8E1;
