--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -1,5 +1,6 @@
 #timeline-viewport {
   margin-top: 20px;
+  padding: 60px 0 0 70px;
   table { table-layout: fixed }
   table tbody {
     tr td.tv-marker {
@@ -30,10 +31,10 @@
         left: -1px;
         width: 55%;
         height: 49px;
-        background-color: #4986E7;
+        background-color: $primary-indigo;
         color: #FFF;
         &.done {
-          background-color: #DBE7FA;
+          background-color: $indigo-lighter;
           color: #777777;
           span { font-weight: 400 }
         }
