[add] list for show in timeline and move cursor.

--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -29,6 +29,7 @@
       position: relative;
       width: 100%;
       .task {
+        cursor: move;
         position: absolute;
         left: -1px;
         width: 55%;
