[change] border color.

--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -2,7 +2,7 @@
 $black:       #1b2733;
 $dark-gray:   #363636;
 $gray:        #727272;
-$light-gray:  #c1c7cd;
+$light-gray:  #bdbdbd;
 $smoke:       #b7b7b7;
 $white:       #FFFFFF;
 
