--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -10,15 +10,18 @@
         width: 60%;
         height: 25px;
         margin-bottom: 25px;
-        border-bottom: 1px dotted #ddd;
-        border-top: 1px solid #ddd;
         font-size: 1px;
+      }
+      .marker-border {
+        border-bottom: 1px dotted #efefef;
+        border-top: 1px solid #efefef;
       }
     }
     tr td.tv-time {
       padding-right: 10px;
       position: relative;
       .time {
+        color: $t-light;
         text-align: right;
         height: 50px;
       }
