--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -1,6 +1,9 @@
 #timeline-viewport {
-  margin-top: 20px;
-  padding: 60px 0 0 70px;
+  margin-top: 80px;
+  padding: 0 0 0 70px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 80%;
   table { table-layout: fixed }
   table tbody {
     tr td.tv-marker {
@@ -27,7 +30,6 @@
       }
     }
     tr td.tv-task {
-      position: relative;
       width: 100%;
       .task {
         cursor: move;
