--- a/src/app/stylesheets/layouts/task-viewport.scss
+++ b/src/app/stylesheets/layouts/task-viewport.scss
@@ -57,6 +57,7 @@
     width: 100%;
     bottom: 0;
     div {
+      font-size: $font-small;
       width: 50%;
       float: left;
       cursor: pointer;
