--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -27,6 +27,7 @@
         color: $t-light;
         text-align: right;
         height: 50px;
+        font-size: $font-small;
       }
     }
     tr td.tv-task {
