[add] material ui drawer and update react, react-dom.

--- a/src/app/stylesheets/layouts/calendar-viewport.scss
+++ b/src/app/stylesheets/layouts/calendar-viewport.scss
@@ -1,5 +1,5 @@
 #calendar-viewport {
-  background-color: $indigo-darker;
+  //background-color: $indigo-darker;
   div.dayname:first-child {
     margin-top: 100px;
   }
