[add] add alert class after 19:00 tasks.

--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -47,7 +47,7 @@
         }
         &.alert {
           top:575px;
-          background-color:#E57373;
+          background-color:$caution;
           border-radius: 0px;
           padding: 0px;
         }
