--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -13,8 +13,6 @@ $t-dark-gray: $dark-gray;
 $t-gray:      $gray;
 $t-red:       #d1283e;
 $t-white:     $white;
-$caution:     $t-red;
-$t-holiday:   #be0d34;
 $sgray:       #808080;
 $notes:       #b1b0ae;
 
@@ -22,6 +20,8 @@ $notes:       #b1b0ae;
 $primary-indigo:  #009688;
 $indigo-darker:   #00897B;
 $indigo-lighter:  #E0F2F1;
+
+$caution:         #F44336;
 
 // $primary-indigo:  #FFCA28;
 // $indigo-darker:   #FF8F00;
