[change] timeline background color. #40

--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -62,7 +62,7 @@
       .nowmarker {
         position: absolute;
         left: 0;
-        width: 400px;
+        width: 60%;
         top: 320px;
         height: 0;
         border-top: 2px solid #ff7f6e;
