[add] onMouseOver/Out. #41

--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -41,6 +41,8 @@
         background-color: $primary-indigo;
         color: #FFF;
         border-bottom: 2px solid $white;
+        &.past { background-color: $primary-indigo-past }
+        &.over { background-color: $primary-indigo-over }
         &.done {
           background-color: $indigo-lighter;
           color: #777777;
@@ -51,6 +53,7 @@
           background-color:$caution;
           border-radius: 0px;
           padding: 0px;
+          &.over { background-color: $caution-over }
         }
         span {
           display: block;
