--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -17,11 +17,13 @@ $sgray:       #808080;
 $notes:       #b1b0ae;
 
 /* BACKGROUND COLORS */
-$primary-indigo:  #009688;
-$indigo-darker:   #00897B;
-$indigo-lighter:  #E0F2F1;
-
-$caution:         #F44336;
+$primary-indigo:      #009688;
+$primary-indigo-past: #80CBC4;
+$primary-indigo-over: #26A69A;
+$indigo-darker:       #00897B;
+$indigo-lighter:      #E0F2F1;
+$caution:             #F44336;
+$caution-over:        #FF5252;
 
 // $primary-indigo:  #FFCA28;
 // $indigo-darker:   #FF8F00;
