--- a/src/app/stylesheets/layouts/timeline-viewport.scss
+++ b/src/app/stylesheets/layouts/timeline-viewport.scss
@@ -40,7 +40,7 @@
         height: 50px;
         background-color: $primary-indigo;
         color: #FFF;
-        border-bottom: 2px solid $white;
+        border: 1px solid $white;
         &.past { background-color: $primary-indigo-past }
         &.over { background-color: $primary-indigo-over }
         &.done {
@@ -60,6 +60,20 @@
           padding: 5px 0 0 5px;
           font-size: $font-small;
           font-weight: 600;
+        }
+        div.resizer {
+          height: 10px;
+          font-size: 20px;
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 6px;
+          margin: auto;
+          width: 100%;
+          text-align: center;
+          cursor: ns-resize;
+          opacity: 0;
+          &.hover { opacity: 1}
         }
       }
       .nowmarker {
