--- a/src/app/stylesheets/layouts/task-viewport.scss
+++ b/src/app/stylesheets/layouts/task-viewport.scss
@@ -10,8 +10,22 @@
     pointer-events: none;
     font-size: $font-medium;
     li {
-      margin-left: 20px;
       div { pointer-events: none }
+    }
+    .indent1 {
+      margin-left: 20px;
+    }
+    .indent2 {
+      margin-left: calc(20px + 2em);
+    }
+    .indent3 {
+      margin-left: calc(20px + 4em);
+    }
+    .indent4 {
+      margin-left: calc(20px + 6em);
+    }
+    .indent5 {
+      margin-left: calc(20px + 8em);
     }
     li::before {
       content: ' ';
@@ -41,19 +55,23 @@
     padding: 0;
     margin: 0;
   }
-  .indent1 {
-    margin-left: 2em;
-    list-style-type: circle;
-  }
-  .indent2 {
-    margin-left: 4em;
-  }
-  .indent3 {
-    margin-left: 6em;
-    list-style-type: circle;
-  }
-  .indent4 {
-    margin-left: 8em;
+  .list-style-disc {
+    .indent1 {
+      list-style-type: circle;
+    }
+    .indent2 {
+      margin-left: calc(20px + 2em);
+    }
+    .indent3 {
+      margin-left: 4em;
+      list-style-type: circle;
+    }
+    .indent4 {
+      margin-left: 6em;
+    }
+    .indent5 {
+      margin-left: 8em;
+    }
   }
   div.title {
     font-size: $font-large;
