[add] highlight for current task line.

--- a/src/app/stylesheets/layouts/task-viewport.scss
+++ b/src/app/stylesheets/layouts/task-viewport.scss
@@ -9,6 +9,9 @@
   ul.task-line {
     pointer-events: none;
     font-size: $font-medium;
+    &.now {
+      background-color: $indigo-lighter;
+    }
     li {
       div { pointer-events: none }
     }
@@ -51,8 +54,8 @@
   .ace-line {
     color: $t-black;
     line-height: 26px;
+    padding: 4px 0px 4px 4px;
     font-size: $font-medium;
-    padding: 0;
     margin: 0;
   }
   .list-style-disc {
