[add] highlight for current line. #48

--- a/src/app/stylesheets/layouts/task-viewport.scss
+++ b/src/app/stylesheets/layouts/task-viewport.scss
@@ -9,7 +9,10 @@
   ul.task-line {
     pointer-events: none;
     font-size: $font-medium;
-    &.now {
+    &.current-line {
+      background-color: $ligh-gray-line;
+    }
+    &.current-task {
       background-color: $indigo-lighter;
     }
     li {
