--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -24,6 +24,7 @@ $indigo-darker:       #00897B;
 $indigo-lighter:      #E0F2F1;
 $caution:             #F44336;
 $caution-over:        #FF5252;
+$ligh-gray-line:      #FAFAFA;
 
 // $primary-indigo:  #FFCA28;
 // $indigo-darker:   #FF8F00;
