[add] rich text tool bar.

--- a/src/app/html/index.html
+++ b/src/app/html/index.html
@@ -6,6 +6,7 @@
     <title>Sudachi Beta</title>
     <link rel="stylesheet" href="./../stylesheets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./../stylesheets/assets/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="./../../lib/jquery-3.1.1.min.js"></script>
     <script src="./../../lib/bootstrap.min.js"></script>
   </head>
