--- a/src/app/stylesheets/_colors.scss
+++ b/src/app/stylesheets/_colors.scss
@@ -2,13 +2,13 @@
 $black:       #1b2733;
 $dark-gray:   #363636;
 $gray:        #727272;
-$light-gray:  #bdbdbd;
+$light-gray:  #e2e2e2;
 $smoke:       #b7b7b7;
 $white:       #FFFFFF;
 
 /* TEXT COLORS */
 $t-black:     $black;
-$t-light:     $light-gray;
+$t-light:     #bdbdbd;
 $t-dark-gray: $dark-gray;
 $t-gray:      $gray;
 $t-red:       #d1283e;
