--- a/src/app/stylesheets/layouts/task-viewport.scss
+++ b/src/app/stylesheets/layouts/task-viewport.scss
@@ -1,6 +1,17 @@
 #task-viewport {
   padding: 60px 30px 40px;
   outline: none;
+  .menu {
+    margin-bottom: 20px;
+    color: $light-gray;
+    .material-icons {
+      font-size: 26px;
+      margin-right: 18px;
+    }
+  }
+  .button[data-active="true"] {
+    color: $dark-gray;
+  }
   .editor-area {
     height: 90%;
     overflow-y: scroll;
@@ -77,6 +88,13 @@
     .indent5 {
       margin-left: 8em;
     }
+  }
+  .list-style-decimal {
+    .indent1 {}
+    .indent2 { margin-left: 2em }
+    .indent3 { margin-left: 4em }
+    .indent4 { margin-left: 6em }
+    .indent5 { margin-left: 8em }
   }
   div.title {
     font-size: $font-large;
